[package]
name = "string-hash-interner"
version = "0.19.0"
authors = ["Robbepop", "blt-r"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/blt-r/string-hash-interner"
documentation = "https://docs.rs/string-hash-interner"
keywords = ["interner", "intern", "string", "str", "symbol"]
description = """Efficient string interner with minimal memory footprint
and fast access to the underlying strings.
"""
categories = ["data-structures"]
edition = "2021"

[dependencies]
hashbrown = { version = "0.15.1", default-features = false, features = ["default-hasher", "raw-entry"] }
serde = { version = "1.0", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.5.1"
fxhash = "0.2"

[[bench]]
name = "bench"
harness = false

[features]
default = ["std", "inline-more"]
std = ["serde?/std"]

# Enable this if you need `Serde` serialization and deserialization support.
#
# Enabled by default.
serde = ["dep:serde"]

# Use this to mark more public functions of the StringInterner (and hashbrown)
# as inline. This significantly increases compile times of the crate but improves
# upon runtime execution.
#
# Enabled by default.
inline-more = ["hashbrown/inline-more"]
